# ros-ros2-LLM-benchmark

./: .gitignore  README.md
behavior_level/perception_control/task_001_color_blob_tracking/: README.md  metadata.json
behavior_level/perception_control/task_002_camera_depth_reach_target/: README.md  metadata.json
behavior_level/perception_control/task_003_multi_node_perception_control/: README.md  metadata.json
behavior_level/perception_control/task_004_mobile_lidar_obstacle_avoidance/: README.md  metadata.json
behavior_level/perception_control/task_005_rgbd_stereo_pointcloud_control/: README.md  metadata.json
behavior_level/perception_control/task_006_3d_sensor_moveit_arm_control/: README.md  metadata.json
behavior_level/perception_control/task_007_autonomous_navigation/: README.md  metadata.json
behavior_level/perception_control/task_008_robot_sim_perception_control/: README.md  metadata.json
behavior_level/perception_control/task_009_stretch_pipeline/: README.md  metadata.json
behavior_level/perception_control/task_009_stretch_pipeline/ros1_code/: CMakeLists.txt  package.xml
behavior_level/perception_control/task_009_stretch_pipeline/ros1_code/include/: controller_node.h  mapping_node.h  perception_node.h  planner_node.h
behavior_level/perception_control/task_009_stretch_pipeline/ros1_code/launch/: stretch_pipeline.launch
behavior_level/perception_control/task_009_stretch_pipeline/ros1_code/src/: controller_node.cpp  main_launch.cpp  mapping_node.cpp  perception_node.cpp  planner_node.cpp
behavior_level/sensor_process/task_001_laser_obstacle_detection/: README.md  metadata.json
behavior_level/sensor_process/task_002_camera_edge_detection/: Dockerfile  README.md  metadata.json
behavior_level/sensor_process/task_003_rgbd_pointcloud_generation/: Dockerfile  README.md  metadata.json  setup.sh
behavior_level/sensor_process/task_004_imu_odometry_estimation/: Dockerfile  README.md  metadata.json  setup.sh
behavior_level/sensor_process/task_005_sonar_distance_estimation/: Dockerfile  README.md  metadata.json  setup.sh
behavior_level/sensor_process/task_006_stereo_depth_map/: Dockerfile  README.md  metadata.json  setup.sh
behavior_level/sensor_process/task_007_hector_slam_mapping/: Dockerfile  README.md  metadata.json  setup.sh
behavior_level/sensor_process/task_008_camera_object_detection_yolo/: Dockerfile  README.md  metadata.json  setup.sh
behavior_level/sensor_process/task_009_lio_sam/: README.md  metadata.json
behavior_level/sensor_process/task_010_hark_sound_localization/: README.md  metadata.json
behavior_level/sensor_process/task_011_radar_velocity_estimation/: README.md  metadata.json
behavior_level/sensor_process/task_012_camera_lidar_fusion/: README.md  metadata.json
behavior_level/state_machine/task2_mas_execution_manager/: README.md  metadata.json
behavior_level/state_machine/task3_nrp_experimental_fsm/: README.md  metadata.json
behavior_level/state_machine/task4_ros_task_manage/: README.md  metadata.json
behavior_level/state_machine/task5_flexbe_behavior_engine/: README.md  metadata.json
behavior_level/state_machine/task_001_state_machine_translation/: README.md  metadata.json
behavior_level/state_machine/task_006_airbus_ssm_core/: README.md  metadata.json  simple_demo.scxml  ssm_demo.launch
behavior_level/state_machine/task_007_smacc/: README.md  metadata.json
behavior_level/state_machine/task_008A_robot_statemachine_scaffold/: README.md  metadata.json
interface_level/action_server/task_001_robot_calibration_action/: README.md  metadata.md
interface_level/action_server/task_001_robot_calibration_action/ros1_code/: CMakeLists.txt  calibration_action_server_stub.py  package.xml
interface_level/action_server/task_001_robot_calibration_action/ros1_code/action/: RobotCalibration.action
interface_level/action_server/task_002_turtlebot3_patrol_action/: README.md  metadata.md
interface_level/action_server/task_003_pr2_gripper_action_server/: README.md  metadata.json
interface_level/publisher_subscriber/task_001_simple_pub_sub/ros1_code/: CMakeLists.txt  package.xml
interface_level/publisher_subscriber/task_001_simple_pub_sub/ros1_code/scripts/: listener.py  talker.py
interface_level/publisher_subscriber/task_002_custom_msg_basic/expected_ros2_code/: CMakeLists.txt  package.xml
interface_level/publisher_subscriber/task_002_custom_msg_basic/expected_ros2_code/src/: publisher_node.py  subscriber_node.py
interface_level/publisher_subscriber/task_002_custom_msg_basic/ros1_code/: CMakeLists.txt  package.xml
interface_level/publisher_subscriber/task_002_custom_msg_basic/ros1_code/msg/: Person.msg
interface_level/publisher_subscriber/task_002_custom_msg_basic/ros1_code/src/: publisher_node.py  subscriber_node.py
interface_level/service_client/task_004_turtlebot3_services/ros1_code/: CMakeLists.txt  package.xml  turtlebot3_service_client.py  turtlebot3_service_server_stub.py
interface_level/service_client/task_005_gazebo_spawn_delete/ros1_code/: CMakeLists.txt  delete_model_stub.py  package.xml  spawn_model_stub.py
interface_level/service_client/task_006_gazebo_set_get_state/ros1_code/: CMakeLists.txt  get_model_state_stub.py  package.xml  spawn_model_stub.py
interface_level/service_client/task_007_navigation_make_plan/ros1_code/: CMakeLists.txt  make_plan_client_stub.py  package.xml
interface_level/service_client/task_008_clear_costmaps/ros1_code/: CMakeLists.txt  clear_costmaps_client_stub.py  package.xml
interface_level/service_client/task_009_moveit_planning_scene/ros1_code/: CMakeLists.txt  apply_planning_scene_client_stub.py  package.xml
interface_level/service_client/task_010_controller_manager/ros1_code/: CMakeLists.txt  controller_manager_client_stub.py  package.xml
interface_level/service_client/task_011_robot_services/ros1_code/: CMakeLists.txt  package.xml  robot_service_client_stub.py
system_level/manipulation/task_003_ur5_red_box/: README.md  (+1 more)
system_level/simulation_integration/task_005_Allegro_Hand_V5_ROS1_Task/ros1_code/: CMakeLists.txt  gazebo_imu_plugin.cpp  msgbuffer.h
(+619 files in other folders)
