<package format="2">
  <name>clear_costmaps_demo</name>
  <version>0.0.0</version>
  <maintainer email="todo@example.com">TODO</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_srvs</depend>
  <depend>__________</depend> <!-- TODO: extra dependencies -->
</package>
