<package format="2">
  <name>controller_manager_demo</name>
  <version>0.0.0</version>
  <maintainer email="todo@example.com">TODO</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>controller_manager_msgs</depend>
  <depend>__________</depend> <!-- TODO: extra dependencies -->
</package>
