<package format="2">
  <name>robot_service_demo</name>
  <version>0.0.0</version>
  <maintainer email="todo@example.com">TODO</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>__________</depend> <!-- robot-specific srv packages -->
</package>
